# bidding-flash-sales-system

./: .env.example  .gitignore  .pre-commit-config.yaml  DEPLOYMENT_AWS_EC2.md  HIGH_CONCURRENCY_OPTIMIZATION.md  PERFORMANCE_FIXES.md  README.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt
alembic/: env.py
app/: main.py
app/api/: bid.py
app/core/: __init__.py  config.py  database.py
app/models/: bid.py  user.py
app/schemas/: bid.py
backend/: .dockerignore  DockerFile  QUICKSTART.md  README.md  SETUP.md  alembic.ini  check_db_constraints.py  docker-compose.yml  docker-entrypoint.sh  fix_session_times.py  init_db.py  pyproject.toml  requirements.txt  start.sh
backend/alembic/versions/: 925489eadde5_initial_migration.py  add_performance_indexes.py  add_unique_constraint_bids.py  b0b4358ccea1_enable_timezone_support.py
backend/app/: main.py
backend/app/api/: admin.py  auth.py  bid.py  (+1 more)
deploy/app/: .env.app.example  run-app.sh
deploy/data/: .env.data.example  bootstrap-data-node.sh  docker-compose.data.yml
deploy/scripts/: build_backend_image.ps1  build_backend_image.sh  build_frontend_image.ps1  build_frontend_image.sh  push_to_ecr.ps1  push_to_ecr.sh
frontend/: .dockerignore  Dockerfile  INTEGRATION.md  README.md  data_generate.sql  nginx.conf  package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.css  App.js  index.js
load_test/: .gitignore  README.md  USAGE_GUIDE.md  analyze_bid_logs.py  create_test_users.py  locustfile.py  requirements.txt  run_test.ps1  run_test.sh  setup_test_session.py
(+17 files in other folders)
